for saperated service